Fix saving a resource over an existing, but deleted resource

BUG:441699